# Python

./: .env  FriendsList.py  HaloProject.py  HaloProject2.py  Names&Position.py  PieOfLife.py  README.md  Valk.py  bot2.py  main.py  pyproject.toml  weatherbot.py
BatBot/: TheBar-Man  TheBar-Man.py
Insta/: insta_app.py
YouTube App/: youtube.py
