[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Edward Moon <emoon9323@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.3"
discord = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
